[package]
name = "coderpwh_pipeviewer"
version = "0.1.0"
edition = "2021"
description = "coderpwh demo pipeviewer project"
homepage = "https://github.com/pwh-pwh/pipeviewer"
repository = "https://github.com/pwh-pwh/pipeviewer"
readme = "README.md"
keywords = ["educational"]
categories = ["command-lines-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
crossbeam = "0.8.2"
crossterm = "0.26.1"
